# HPM6P41_BB

./: .gitignore  BB.kicad_sch  HPM6P41_BB.kicad_pcb  HPM6P41_BB.kicad_pro  HPM6P41_BB.kicad_sch  LICENSE  MCU_IO_A.kicad_sch  MCU_IO_B_C.kicad_sch  MCU_MISC.kicad_sch  MCU_MISC2.kicad_sch  MCU_PWR.kicad_sch  POWER.kicad_sch  README.md  SENSE.kicad_sch  actions.kicad_jobset
HardwareProject/: BB.kicad_sch  HPM6P41_BB.kicad_pcb  HPM6P41_BB.kicad_pro  HPM6P41_BB.kicad_sch  MCU_IO_A.kicad_sch  MCU_IO_B_C.kicad_sch  MCU_IO_D.kicad_sch  MCU_MISC.kicad_sch  MCU_MISC2.kicad_sch  (+5 more)
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/: CMakeLists.txt  board.c  board.h  pinmux.c  pinmux.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/: CMakeLists.txt
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/adc/: board_adc.c  board_adc.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/cp/: board_cp.c  board_cp.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/iic/: CMakeLists.txt  board_i2c.c  board_i2c.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/lcd/: fonts.h  st7789.c  st7789.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/pwmv2/: CMakeLists.txt  board_pwmv2.c  board_pwmv2.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/syr838/: CMakeLists.txt  board_syr838.c  board_syr838.h
SoftwareExamples/board/hpm6p41_bb_ext_vsoc/drivers/vofa/: vofa.c  vofa.h
SoftwareExamples/chopper/: CMakeLists.txt  chopper.jdebug
SoftwareExamples/chopper/config/: usb_config.h
SoftwareExamples/chopper/src/: adc.c  cdc_acm.c
SoftwareExamples/mcan/: CMakeLists.txt  app.yaml
SoftwareExamples/mcan/src/: mcan_demo.c
SoftwareExamples/spi_lcd/: CMakeLists.txt
SoftwareExamples/spi_lcd/src/: spi_lcd.c
(+49 files in other folders)
